--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.0",
     "mongoose-aggregate-paginate-v2": "^1.0.7"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.5"
   }
 }
